--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,2 +1,10 @@
-%p 
-  Welcome
+.container
+  .row
+    .span11
+      .hero-unit
+        %h1="Welcome"
+        %br
+        %p="Cincinnati Ruby Brigade was formed lorem ipsum"
+    %ul.span5.sponsors
+      %li
+        %h3="Sponsors"
