--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,1 +1,15 @@
 @import "bootstrap"
+h1.brand
+  background-image: url('rubylogo.png')
+  background-repeat: no-repeat
+.brand a
+  padding-left: 1.5em
+
+.sponsors
+  background: #ccc
+
+.sponsors h3
+  padding-left: 20px
+
+.meeting_info
+
