--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,14 +1,16 @@
 #meeting-details
+  .span16
   %h2="Next Meeting:"
-  .span-one-third
-    %em="Main Topic:" 
-    %h3
-      Ruby LDAP
-      %small="by Sam Corder"
-    %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
-  .span-one-third
-    %em="Ruby 101:"
-    %h3
-      Std Lib URI
-      %small="by Rob Beiderharn"
-    %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
+  .row
+    .span6.offset1
+      %em="Main Topic:" 
+      %h3
+        Ruby LDAP
+        %small="by Sam Corder"
+      %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
+    .span6.offset1
+      %em="Ruby 101:"
+      %h3
+        Std Lib URI
+        %small="by Rob Beiderharn"
+      %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
