--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,45 +1,55 @@
 @import "bootstrap"
+@import url(http://fonts.googleapis.com/css?family=Lekton)
 
-html
+html, body
   background-image: url('gray_sand.png')
   background-repeat: x,y
 
-body
-  background-image: url('gray_sand.png')
-  background-repeat: x,y
-
-h1.brand
-  background-image: url('rubylogo.png')
+.brand
+  background-image: url('rubylogo_large.png')
   background-repeat: no-repeat
+  padding-bottom: 3em
+  height: 16em
 
-.brand a
-  padding-left: 1.3em
-footer
-  @include gradientBar(#111, #202020)
-  height: 180px
-#nav-bar
-  @extend .topbar
+.brand h1
+  padding-top: 1em
+  padding-left: 2em
+  font-family: 'Lekton', sans-serif
+  font-weight: 400
+  font-size: 8em 
 
 #main-section
   padding-top: 30px
+  padding-left: 1.3em
   @include fixed-container
   background: #fff
-  background-image: url('gray_sand.png')
-  background-repeat: x,y
-
-#sponsors
-  @include makeColumn(5)
-  background-color: #ccc
-
-#sponsors h3
-  padding-left: 20px
-
-#meeting-details
-  @include makeColumn(11)
-  margin: 0
   background-image: url('stucco.png')
   background-repeat: x,y
-#meeting-details h2
-  padding-left: 20px
-#meeting_info
 
+#marketing
+  padding-bottom: 4em
+
+#nav-bar
+  @extend .pills
+  padding-bottom: 1em
+
+#hello-ruby
+  @include makeColumn(6)
+
+#about-us
+  @include makeColumn(9)
+  padding-left: 1.3em
+  font-size: 2em
+
+#meeting-details
+  @extend .row
+  padding-left: 1.3em
+  padding-bottom: 1.3em
+
+#meeting-details h2
+  padding-bottom: 1em
+
+footer
+  @include gradientBar(#111, #202020)
+  margin: 0
+  padding: 2em
