--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
           #hello-ruby
             :erb
               <pre class="prettyprint">
-                class HelloRubist
+                class HelloRubyist
                   def welcome(name)
                     puts "Welcome #/{name} lets get hacking!"
                   end
@@ -37,8 +37,8 @@
               </pre>
           #about-us
             %h3="About us"
-            %p="Cincinnati Ruby Brigade was formed by a few local developers who desired a place to talk about ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as ruby itself."
-            %p="Today we meet once a month to discuss and hack on code and strieve to keep to the princable of less slides more code"
+            %p="Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself."
+            %p="Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strieve to keep to the principle of less slides more code."
       =yield
   %footer
     .fill
