--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,16 +1,19 @@
 #meeting-details
-  .span16
-  %h2="Next Meeting:"
-  .row
-    .span6.offset1
-      %em="Main Topic:" 
-      %h3
-        Ruby LDAP
-        %small="by Sam Corder"
-      %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
-    .span6.offset1
-      %em="Ruby 101:"
-      %h3
-        Std Lib URI
-        %small="by Rob Beiderharn"
+  #photos
+    %ul.media-grid
+      %li
+        %a{:href => "#"}
+          %img{:src => "http://placehold.it/330x230"}
+  #next-meeting
+    %h2="Next Meeting:"
+    %em="Ruby 101:"
+    %h3
+      Std Lib URI
+      %small="by Rob Beiderharn"
       %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
+    %br
+    %em="Main Topic:"
+    %h3
+      Ruby LDAP
+      %small="by Sam Corder"
+    %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
