minor playing around with layout things still dont quite line up yet need better grid setup

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -36,10 +36,14 @@ html, body
 #hello-ruby
   @include makeColumn(6)
   padding-left: 2em
+
 #about-us
   @include makeColumn(9)
   font-size: 2em
   padding-left: 1em
+
+#about-us h2
+  padding-bottom: 1em
 
 #meeting-details
   @extend .row
