more minor fussing over style

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -21,6 +21,7 @@ html, body
 #main-section
   padding-top: 30px
   padding-left: 1.3em
+  padding-right: 1.3em
   @include fixed-container
   background: #fff
   background-image: url('stucco.png')
