--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
               <pre class="prettyprint">
                 class HelloRubyist
                   def welcome(name)
-                    puts "Welcome #/{name} lets get hacking!"
+                    puts "Welcome #{name} lets get hacking!"
                   end
 
                   #your codes here -->
