--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,8 +22,12 @@
             %ul#nav-bar
               %li.active= link_to "About Us", "#About Us"
               %li= link_to "Next Meeting", "#Next Meeting"
+              %li= link_to "Past Meetings", "#Past Meeting"
+              %li= link_to "Location", "#Location"
         .row
           #hello-ruby
+            %h2="Come write code with us!"
+            %br
             :erb
               <pre class="prettyprint">
                 class HelloRubyist
