--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,14 +6,35 @@
           %img{:src => "http://placehold.it/330x230"}
   #next-meeting
     %h2="Next Meeting:"
-    %em="Ruby 101:"
-    %h3
-      Std Lib URI
-      %small="by Rob Beiderharn"
-      %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
-    %br
     %em="Main Topic:"
     %h3
       Ruby LDAP
       %small="by Sam Corder"
     %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
+    %br
+    %em="Ruby 101:"
+    %h3
+      Std Lib URI
+      %small="by Rob Beiderharn"
+    %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
+
+#location-details
+  #location-map
+    %ul.media-grid
+      %li
+        %a{:href => "#"}
+          %img{:src => "http://placehold.it/330x230"}
+
+  #location-directions
+    %h2="Location:"
+    %ul
+      %li
+        %span="Turn Left"
+      %li
+        %span="Turn Right"
+      %li
+        %span="Turn Around"
+      %li
+        %span="Shake it all About"
+      %li
+        %span="Thats what its all about"
