--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,6 +43,11 @@
             %h2="About us"
             %p="Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself."
             %p="Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strieve to keep to the principle of less slides more code."
+          #sponsors
+            %h2="Sponsors"
+            %ul
+              %li
+                Gaslight Software
       =yield
   %footer
     .fill
