We are now retrieving the most recent meeting info and rendering it to the page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -3,20 +3,9 @@
     %ul.media-grid
       %li
         %a{:href => "#"}
-          %img{:src => "http://placehold.it/330x230"}
+          %img{:src => "/assets/cincyrb3.jpg"}
   #next-meeting
     %h2="Next Meeting:"
-    %em="Main Topic:"
-    %h3
-      Ruby LDAP
-      %small="by Sam Corder"
-    %p="Sam talks about Ruby LDAP and stuff. Sam is an awesome coder who writes awesome code come see him talk."
-    %br
-    %em="Ruby 101:"
-    %h3
-      Std Lib URI
-      %small="by Rob Beiderharn"
-    %p="Rob gives a 101 talk introducing Ruby URI. If you have never heard Rob speak you owe it to yourself to come out."
 
 #location-details
   #location-map
