attempt at getting google maps api to work

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,8 @@
     %link{:href => "/assets/application.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Lato:100italic,300,400|PT+Serif:400,400italic,700,700italic", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Lekton", :rel => "stylesheet", :type => "text/css"}/
-
     = javascript_include_tag :application
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&sensor=false" ></script>
     /[if IE] <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     /[if lt IE 9] <link rel="stylesheet" media="all" type="text/css" href="css/ie.css" />
   %body{ :class => page_class }
@@ -22,7 +22,6 @@
             %ul#nav-bar
               %li.active= link_to "About Us", "#About Us"
               %li= link_to "Next Meeting", "#Next Meeting"
-              %li= link_to "Past Meetings", "#Past Meeting"
               %li= link_to "Location", "#Location"
         .row
           #hello-ruby
@@ -48,6 +47,10 @@
             %ul
               %li
                 Gaslight Software
+              %li
+                Engine Yard
+              %li
+                EdgeCase
       =yield
   %footer
     .fill
