got google maps working credit Kevin Rockwood! Need to make it less nestedtastic now.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -72,12 +72,13 @@ html, body
   padding-bottom: 1.3em
 
 #location-map
-  @include makeColumn(5)
+  @include makeColumn(6)
+  width: 630px
+  height: 430px 
 
 #location-directions
-  @include makeColumn(4)
-  @include offset(1)
-  padding-left: 1em
+  @include makeColumn(3)
+  padding-left: 2em
 
 footer
   @include gradientBar(#111, #202020)
