--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -57,4 +57,4 @@
         .span16
           %span="footer stuff goes here"
 
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&sensor=false" ></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&sensor=false&libraries=places" ></script>
