--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -10,21 +10,8 @@
 #location-details
 
   #location-map
-    %ul.media-grid
-      %li
-        %a{:href => "#"}
-          %img{:src => "http://placehold.it/330x230"}
 
   #location-directions
     %h2="Location:"
-    %ul
-      %li
-        %span="Turn Left"
-      %li
-        %span="Turn Right"
-      %li
-        %span="Turn Around"
-      %li
-        %span="Shake it all About"
-      %li
-        %span="Thats what its all about"
+
+    #location-info
