added scroll to functionality

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,9 +19,9 @@
         .row
           .span16
             %ul#nav-bar
-              %li.active= link_to "About Us", "#About Us"
-              %li= link_to "Next Meeting", "#Next Meeting"
-              %li= link_to "Location", "#Location"
+              %li.active= link_to "About Us", "#about-us"
+              %li= link_to "Next Meeting", "#next-meeting"
+              %li= link_to "Location", "#location-details"
         .row
           #hello-ruby
             %h2="Come write code with us!"
