--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %link{:href => "/assets/application.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Lato:100italic,300,400|PT+Serif:400,400italic,700,700italic", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Lekton", :rel => "stylesheet", :type => "text/css"}/
-    = javascript_include_tag :application
+    <script src="assets/application.js"></script>
     /[if IE] <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     /[if lt IE 9] <link rel="stylesheet" media="all" type="text/css" href="css/ie.css" />
   %body{ :class => page_class }
