now with haml friendly syntax

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -57,14 +57,13 @@
         .span16
 
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&sensor=false&libraries=places" ></script>
-  <script type="text/javascript">
+  :javascript
     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-25957234-6']);
-     _gaq.push(['_trackPageview']);
+    _gaq.push(['_setAccount', 'UA-25957234-6']);
+    _gaq.push(['_trackPageview']);
 
-     (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-  </script>
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
