load some of the meetup info

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,11 +54,10 @@
           %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} Write code with us!
         #next.four.columns
           %section
-            %article
+            %article#next-meeting
               %p
-                %em Our Next Meetup
-              %h3 Tuesday May 15, 2012
-              %p Double Rainbow Testing with JRuby and RSpec-given
+                = image_tag 'spinner.gif'
+                Loading...
             %article#location
               %p
                 %em Location
