--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -181,7 +181,7 @@ nav
   background: image-url('dark-overlay-bg.jpg')
   font-size: 1em
   padding: 20px
-  a
+  & > a
     background: image-url('main.png') -107px -148px no-repeat
     display: block
     float: left
