--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -74,7 +74,9 @@
           #tweet
             %a{:href => ""} Follow Us
             %h4 Recent Tweet
-            %p BIG NEWS! Leon Gersing (@rubybuddha) will be speaking tonight! You know you cannot miss this. Please RT.
+            %p
+              = image_tag 'spinner.gif'
+              Loading...
         #events.four.columns
           %h3 Upcoming Events
           %section
