use the venue location from meetup

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -58,12 +58,10 @@
               %p
                 = image_tag 'spinner.gif'
                 Loading...
-            %article#location
+            %article#location-info
               %p
-                %em Location
-              %h3 Gaslight Software
-              %p 11126 Kenwood Road, Suite C Cincinnati, OH 45242
-            %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} Get Directions
+                = image_tag 'spinner.gif'
+                Loading...
       / end #container
     %section#about
       .container.row
