--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   / <![endif]
   %head
     %meta{:charset => "utf-8"}/
-    %link{:href => "/favicon.ico", :rel => "icon", :type => "image/ico"}
+    = favicon_link_tag 'favicon.ico'
     / Set the viewport width to device width for mobile
     %meta{:content => "width=device-width", :name => "viewport"}/
     %title Cincinnati Ruby Brigade
