added past events page including vimeo videos

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,6 +25,9 @@ body
 .container
   padding: 60px 0
 
+.containerVideo
+  padding: 60px 0
+
 header, #about, #sponsors
   background: image-url('dark-bg.jpg')
 
@@ -361,6 +364,28 @@ input:-moz-placeholder, textarea:-moz-placeholder
   &:hover
     background: #423f35
     color: #EDECE4
+
+
+.url
+  font-size: 12px
+
+/* -----------------------------------------
+ *   Video
+ *-----------------------------------------
+
+
+#video
+  h2
+    color: #1e1e1e
+    font-family: 'BebasNeueRegular', arial, sans serif
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8)
+  p
+    color: #1e1e1e
+    width: 80%
+  form
+    padding: 20px 0
+
+
 
 /* -----------------------------------------
  *   Footer Styles
