--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,16 +1,88 @@
-#meeting-details
-  #photos
-    %ul.media-grid
-      %li
-        %a{:href => "#"}
-          %img{:src => "/assets/cincyrb3.jpg"}
-  #next-meeting
-
-#location-details
-
-  #location-map
-
-  #location-directions
-    %h2="Location:"
-
-    #location-info
+%section#home
+  .container.row
+    .eight.columns
+      %h1 Cincy.rb - Cincinnati Ruby Brigade
+      = image_tag('logo.png', alt: 'Cincy.rb logo', id: 'logo')
+      %p
+        %strong Cincinnati Ruby Brigade
+        is a group of local developers who talk about Ruby specific topics and share code.
+      %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} Write code with us!
+    #next.four.columns
+      %section
+        %article#next-meeting
+          %p
+            = image_tag 'spinner.gif'
+            Loading...
+        %article#location-info
+  / end #container
+%section#about
+  .container.row
+    .eight.columns
+      %h2 About Us
+      %p Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself.
+      %p Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strieve to keep to the principle of less slides more code.
+      #tweet
+        %a{:href => ""} Follow Us
+        %h4 Recent Tweet
+        %p
+          = image_tag 'spinner.gif'
+          Loading...
+    #events.four.columns
+      %h3 Upcoming Events
+      %section
+        %article
+          .date
+            %h1
+              May
+              %span 15
+          %p Double Rainbow Testing with JRuby and RSpec-given
+          %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight Studios
+        %article
+          .date
+            %h1
+              May
+              %span 15
+          %p Double Rainbow Testing with JRuby and RSpec-given
+          %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight Studios
+        %article
+          .date
+            %h1
+              May
+              %span 15
+          %p Double Rainbow Testing with JRuby and RSpec-given
+          %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight Studios
+  / end .row
+%section#contact
+  .container.row
+    %h2 Contact Us
+    %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu quam et arcu venenatis dignissim nec id turpis. Proin non sapien elit.
+    %form.container.row
+      #left-contact.five.columns
+        %input{:placeholder => "​Name", :type => "​text"}
+        ​
+        %input{:placeholder => "​Email Address", :type => "​text"}
+        ​
+        %input{:placeholder => "​Subject", :type => "​\"text"}
+        ​
+      #left-contact.seven.columns
+        %textarea{:id => "​standardTexted", :placeholder => "​Message"}
+        ​
+      #submit
+        %input{:type => "submit", :value => "Submit"}/
+%section#sponsors
+  .container.row
+    %h2 Sponsors
+    %a.become-a-sponsor{:href => "mailto:info@gaslightsoftware.com"} + become a sponsor
+    .sponsors.container.row
+      %article#edgecase.four.columns
+        %a.logo{:href => "http://www.edgecase.com", :target => "_blank"} EdgeCase
+        %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+        %a{:href => "http://www.edgecase.com", :target => "_blank"} www.edgecase.com
+      %article#engine-yard.four.columns
+        %a.logo{:href => "http://www.engineyard.com", :target => "_blank"} Engine Yard
+        %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+        %a{:href => "http://www.engineyard.com", :target => "_blank"} www.engineyard.com
+      %article#gaslight.four.columns
+        %a.logo{:href => "http://www.gaslightsoftware.com", :target => "_blank"} Gaslight Software
+        %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+        %a{:href => "http://www.gaslightsoftware.com", :target => "_blank"} www.gaslightsoftware.com
