replace Latin for sponsors

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -121,15 +121,15 @@
         .sponsors.container.row
           %article#edgecase.four.columns
             %a.logo{:href => "http://www.edgecase.com", :target => "_blank"} EdgeCase
-            %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+            %p We are a team of talented software artisans who love solving problems. Our dedicated group of developers and artists have individual expertise in areas such as usability, security, enterprise application integration, and business analysis. Passionate about software development, we are driven by the challenge of what we do.
             %a{:href => "http://www.edgecase.com", :target => "_blank"} www.edgecase.com
           %article#engine-yard.four.columns
             %a.logo{:href => "http://www.engineyard.com", :target => "_blank"} Engine Yard
-            %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+            %p Engine Yard is the leading Platform as a Service (PaaS), empowering software application innovation more rapidly, easily and cost effectively.
             %a{:href => "http://www.engineyard.com", :target => "_blank"} www.engineyard.com
           %article#gaslight.four.columns
             %a.logo{:href => "http://www.gaslightsoftware.com", :target => "_blank"} Gaslight Software
-            %p Rhoncus dui facilisis a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+            %p We are leading agile practitioners delivering value-driven software. We've honed our craft through practical application. We've grown with the industry. We have a history of multiple languages, environments and a mastery of the best technologies.
             %a{:href => "http://www.gaslightsoftware.com", :target => "_blank"} www.gaslightsoftware.com
     %footer
       .container.row
