Don't change vendor/asset/stylesheets use sass to extend

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -385,7 +385,13 @@ input:-moz-placeholder, textarea:-moz-placeholder
   form
     padding: 20px 0
 
+.videos
+  @extend .container
+  margin: 0
 
+.video
+  @extend .six, .columns, .flex-video, .widescreen, .vimeo
+  padding-bottom: 27%
 
 /* -----------------------------------------
  *   Footer Styles
