add database models for events break up past_events into partials

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -392,6 +392,26 @@ input:-moz-placeholder, textarea:-moz-placeholder
 .video
   @extend .six, .columns, .flex-video, .widescreen, .vimeo
   padding-bottom: 27%
+/* -----------------------------------------
+ *   Past Events Styles
+ * -----------------------------------------
+#past-events
+  @extend #about
+
+.event
+  @extend .container.row
+  @extend .twelve.columns
+
+/* -----------------------------------------
+ *   Speaker Styles
+ * ----------------------------------------- 
+.speakers
+  @extend .speakers
+  @extend .container
+  @extend .row
+
+.speaker-bio
+  @extend .ten.columns
 
 /* -----------------------------------------
  *   Footer Styles
