--- a/app/views/past_events/_past_events.html.haml
+++ b/app/views/past_events/_past_events.html.haml
@@ -3,6 +3,7 @@
     .event
       %h2 What You Missed...
       .speakers
+        %h3 Speakers
         - event.speakers.each do |speaker| 
           .speaker
             = image_tag("")
@@ -11,7 +12,6 @@
                 %p= speaker.name
             .speaker-bio
               %p= speaker.bio
-              
 
     %section#video
       .containerVideo
@@ -19,7 +19,6 @@
           %h2 Media
           %p= event.topic
           .videos
-            .video
-              %iframe{:src => "http://player.vimeo.com/video/44520801", :width => "100%"}
-            .video
-              %iframe{:src => "http://player.vimeo.com/video/44520800", :width => "100%"}
+            - event.videos.each do |video|
+              .video
+                %iframe{:src => video.url, :width => "100%"}
