style markup changes for speaker pics

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -413,6 +413,9 @@ input:-moz-placeholder, textarea:-moz-placeholder
 .speaker-bio
   @extend .ten.columns
 
+.speaker img
+  height: 152px
+  width: 189px
 /* -----------------------------------------
  *   Footer Styles
  *-----------------------------------------
