move sponsers back to layout remove ipsum from sponsors

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -399,14 +399,12 @@ input:-moz-placeholder, textarea:-moz-placeholder
   @extend #about
 
 .event
-  @extend .container.row
-  @extend .twelve.columns
-
+  @extend .container
+  @extend .row
 /* -----------------------------------------
  *   Speaker Styles
  * ----------------------------------------- 
 .speakers
-  @extend .speakers
   @extend .container
   @extend .row
 
