added link to meet up event for RSVP button

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,7 +6,7 @@
       %p
         %strong Cincinnati Ruby Brigade
         is a group of local developers who talk about Ruby specific topics and share code.
-      %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} Write code with us!
+      %a{:href => "http://goo.gl/BwcH2", :target => "_blank", :id => "rsvp"} Write code with us!
     #next.four.columns
       %section
         %article#next-meeting
