reverse the order of past events so most recent is at the top

--- a/app/views/past_events/_past_events.html.haml
+++ b/app/views/past_events/_past_events.html.haml
@@ -1,5 +1,5 @@
 %section#past-events
-  - @events.each do |event|
+  - @events.reverse.each do |event|
     .event
       %h2 What You Missed...
       .speakers
